fix spacing of recover delete items

--- a/src/app/browse/browse/browse.component.css
+++ b/src/app/browse/browse/browse.component.css
@@ -1014,3 +1014,6 @@ color: #413E3C;
   display: block;
   margin: 0px auto 14px;
 }
+.recoverFolder {
+  padding-bottom: 20px;
+}
